RESOLVED FIXED296203
[shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-011/012/013/015/016/
https://bugs.webkit.org/show_bug.cgi?id=296203
Summary [shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape...
alan
Reported 2025-07-18 12:53:52 PDT
ssia
Attachments
Patch (17.39 KB, patch)
2025-07-18 12:57 PDT, alan
no flags
Patch (16.01 KB, patch)
2025-07-18 19:00 PDT, alan
no flags
Patch (16.00 KB, patch)
2025-07-19 07:54 PDT, alan
no flags
[fast-cq]Patch (16.03 KB, patch)
2025-07-19 08:52 PDT, alan
no flags
alan
Comment 1 2025-07-18 12:57:19 PDT
alan
Comment 2 2025-07-18 19:00:57 PDT
alan
Comment 3 2025-07-19 07:54:25 PDT
alan
Comment 4 2025-07-19 08:52:50 PDT
Created attachment 476111 [details] [fast-cq]Patch
EWS
Comment 5 2025-07-19 10:59:59 PDT
Committed 297644@main (2fe291f007f2): <https://commits.webkit.org/297644@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476111 [details].
Radar WebKit Bug Importer
Comment 6 2025-07-19 11:00:13 PDT
Tim Nguyen (:ntim)
Comment 7 2025-08-22 22:20:38 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54480
Note You need to log in before you can comment on or make changes to this bug.